// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Track renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-55 0 110 110"
      x="0"
      y="0"
    >
      <defs />
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform=""
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
    </svg>
  </div>
</body>
`;

exports[`Track renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      viewBox="-110 -55 110 110"
      x="100"
      y="200"
    >
      <defs />
      
      <g
        class="tile straight-tile"
        id="id-1"
        transform="rotate(90 0 0)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
    </svg>
  </div>
</body>
`;

exports[`Track update when the model is modified 1`] = `
<body>
  <div>
    <svg
      viewBox="-220 -55 220 110"
      x="100"
      y="200"
    >
      <defs />
      
      <g
        class="tile straight-tile"
        id="id-2"
        transform="rotate(90 0 0)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile straight-tile"
        id="id-3"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-155"
          y="6.735557395310443e-15"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-155"
            y="6.735557395310443e-15"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-155"
            y="27.500000000000007"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-155"
            y="55.00000000000001"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-155"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-70"
            y="6.735557395310443e-15"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-70"
            y="27.500000000000007"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-70"
            y="55.00000000000001"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-70"
            y="82.5"
          />
        </g>
      </g>
      
      
    </svg>
  </div>
</body>
`;
